<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context=".SignInActivity"
    android:id="@+id/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="Welcome to\nAtlas Events"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailOrPhone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="Email"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="Password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:padding="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">


        <Button
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sign in"
            android:backgroundTint="#1E2324"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newToSigmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="New to Sigmas? "
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/joinNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Join Now"
            android:textColor="#1569BF" />
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center_vertical"-->
<!--        android:layout_marginBottom="16dp">-->

<!--        <View-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@android:color/darker_gray"/>-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="OR"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginEnd="8dp"/>-->

<!--        <View-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_weight="1"-->
<!--            android:background="@android:color/darker_gray"/>-->
<!--    </LinearLayout>-->

<!--    <Button-->
<!--        android:id="@+id/googleSignInButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="#1E2324"-->
<!--        android:drawableLeft="@drawable/ic_google_logo"-->
<!--        android:text="Sign in with Google"-->
<!--        android:textColor="@android:color/white"-->
<!--        android:paddingLeft="20dp"-->
<!--        android:layout_marginBottom="8dp"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="161dp">

    </RelativeLayout>

    <!--    <Button-->
<!--        android:id="@+id/facebookSignInButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:background="@drawable/rectangle_button"-->
<!--        android:text="Sign in with Facebook"-->
<!--        android:textColor="@android:color/black"-->
<!--        android:layout_marginBottom="8dp"/>-->

<!--    <Button-->
<!--        android:id="@+id/xSignInButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/rectangle_button"-->
<!--        android:text="Sign in with X"-->
<!--        android:textColor="@android:color/black"/>-->

</LinearLayout>
